--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+menu,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
