--- a/src/app/components/nav/nav.scss
+++ b/src/app/components/nav/nav.scss
@@ -41,6 +41,7 @@ nav {
   .profile {
     .name {
       margin-right: 20px;
+      text-transform: capitalize;
     }
     img {
       width: 50px;
