--- a/src/app/components/doctor/doctor.scss
+++ b/src/app/components/doctor/doctor.scss
@@ -1,12 +1,16 @@
+@import "../../../styles/all.inc.scss";
 .doctor {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 150px;
   img {
+    object-fit: cover;
     width: 100%;
+    height: 150px;
     border-radius: 100px;
     border: 10px solid white;
+    background: $lgray;
   }
   .name {
     margin: auto;
