--- a/src/styles/partials/reset.scss
+++ b/src/styles/partials/reset.scss
@@ -17,6 +17,12 @@ a:not(.default) {
   text-transform: capitalize;
   color: black;
 }
-button.rounded {
-  border-radius: 100px;
+button {
+  &[class*="rounded"] {
+    border-radius: 100px;
+  }
+
+  &.rounded-padd {
+    padding: 8px 20px;
+  }
 }
