scale animation on doctors and sections

--- a/src/app/components/doctor/doctor.scss
+++ b/src/app/components/doctor/doctor.scss
@@ -16,3 +16,11 @@
     margin: auto;
   }
 }
+.doctor-link {
+  position: relative;
+  transition: all 200ms ease-in-out;
+}
+.doctor-link:hover {
+  transform: scale(1.15);
+  z-index: 1;
+}
