--- a/src/styles/partials/reset.scss
+++ b/src/styles/partials/reset.scss
@@ -26,3 +26,23 @@ button {
     padding: 8px 20px;
   }
 }
+
+div[class*="MuiFilledInput-adornedEnd"] {
+  padding-right: 0;
+}
+
+div[class*="MuiFilledInput-underline"]:after,
+div[class*="MuiFilledInput-underline"]:before,
+div[class*="MuiFilledInput-underline"]:hover:not(.MuiFilledInput-disabled-366):not(.MuiFilledInput-focused-365):not(.MuiFilledInput-error-369):before {
+  border-bottom: 0;
+}
+
+p[class*="MuiFormHelperText-root"] {
+  margin: 0;
+  min-height: 0;
+  span.error {
+    display: block;
+    margin: 5px;
+    color: red;
+  }
+}
