responsive done! on dashboard signup and login

--- a/src/app/containers/login-form/login-form.scss
+++ b/src/app/containers/login-form/login-form.scss
@@ -8,3 +8,10 @@
     @include vec();
   }
 }
+@media only screen and (max-width: 900px) {
+  .login-form {
+    .login-vec {
+      display: none;
+    }
+  }
+}
