--- a/src/app/components/nav/nav.scss
+++ b/src/app/components/nav/nav.scss
@@ -14,12 +14,12 @@ nav .profile .chip {
 nav {
   .nav-bar {
     .logo {
+      margin-right: 50px;
       img {
         max-width: 100px;
       }
     }
     menu {
-      margin-left: 60px;
       ul {
         list-style-type: none;
 
@@ -52,6 +52,16 @@ nav {
       height: 50px;
       object-fit: cover;
       border-radius: 25px;
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  nav {
+    .nav-bar {
+      .logo {
+        margin-right: 0;
+      }
     }
   }
 }
