--- a/src/app/containers/form/login-form/login-form.scss
+++ b/src/app/containers/form/login-form/login-form.scss
@@ -1,17 +1,16 @@
-@import "../../../styles/all.inc.scss";
+@import "../../../../styles/all.inc.scss";
 
-.signup-form {
+.login-form {
   form {
     @include form();
   }
-  .signup-vec {
+  .login-vec {
     @include vec();
   }
 }
-
 @media only screen and (max-width: 900px) {
-  .signup-form {
-    .signup-vec {
+  .login-form {
+    .login-vec {
       display: none;
     }
   }
