--- a/src/styles/partials/mixins.scss
+++ b/src/styles/partials/mixins.scss
@@ -6,6 +6,7 @@
     padding: 10px 50px;
     color: white;
     font-size: 18px;
+    border-radius: 100px;
     &:hover {
       box-shadow: 0px 8px 40px rgba($color: $daccent, $alpha: 0.5);
     }
