--- a/src/app/components/post/post.scss
+++ b/src/app/components/post/post.scss
@@ -26,6 +26,13 @@
     padding-right: 20px;
     flex-direction: column;
     align-items: center;
+
+    .voted {
+      color: $daccent;
+      svg {
+        font-size: 60px;
+      }
+    }
   }
 
   .wrapper {
