--- a/src/styles/partials/reset.scss
+++ b/src/styles/partials/reset.scss
@@ -34,8 +34,11 @@ div[class*="MuiFilledInput-adornedEnd"] {
 }
 
 div[class*="MuiFilledInput-underline"]:after,
+div[class*="MuiInput-underline"]:after,
 div[class*="MuiFilledInput-underline"]:before,
-div[class*="MuiFilledInput-underline"]:hover:not(.MuiFilledInput-disabled-366):not(.MuiFilledInput-focused-365):not(.MuiFilledInput-error-369):before {
+div[class*="MuiInput-underline"]:before,
+div[class*="MuiFilledInput-underline"]:hover:not(.MuiFilledInput-disabled-366):not(.MuiFilledInput-focused-365):not(.MuiFilledInput-error-369):before,
+div[class*="MuiInput-underline"]:hover:not(.MuiInput-underline-disabled-366):not(.MuiInput-underline-focused-365):not(.MuiInput-underline-error-369):before {
   border-bottom: 0;
 }
 
@@ -63,8 +66,10 @@ button.small {
 
 .naked [class*="MuiFilledInput-root"] {
   background: $vlgray;
+  border-bottom: none;
   &:hover,
   &:focus {
+    border-bottom: none;
     background: $vlgray;
   }
 }
@@ -74,5 +79,14 @@ div[class*="MuiPrivateTextarea-root"] {
   overflow: auto;
   textarea {
     height: 100%;
+  }
+}
+
+button.naked {
+  box-shadow: none;
+  background: transparent;
+
+  &:hover {
+    background-color: $lgray;
   }
 }
