--- a/src/styles/partials/colors.scss
+++ b/src/styles/partials/colors.scss
@@ -2,6 +2,7 @@ $accent: #56eef2;
 $daccent: #42c2c2;
 $dgray: #414141;
 $gray: #888888;
+$mgray: #c4c4c4;
 $lgray: #dfdfdf;
 $vlgray: #f5f5f5;
 $err: #e03737;
