--- a/src/styles/partials/colors.scss
+++ b/src/styles/partials/colors.scss
@@ -6,3 +6,5 @@ $mgray: #c4c4c4;
 $lgray: #dfdfdf;
 $vlgray: #f5f5f5;
 $err: #e03737;
+$booked: #F3AAAA;
+$gradient: linear-gradient(to bottom right, $daccent, $accent);
