--- a/src/app/components/profile-pic/profile-pic.scss
+++ b/src/app/components/profile-pic/profile-pic.scss
@@ -5,7 +5,10 @@
 
     .pic {
         img {
-            max-width: 150px;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 75px;
         }
     }
 
