--- a/src/app/components/section/section.scss
+++ b/src/app/components/section/section.scss
@@ -1,26 +1,35 @@
+@import "../../../styles/all.inc.scss";
+
 .section {
-  width: 70%;
-  display: -webkit-flex;
   display: flex;
   flex-direction: column;
-  margin: 50px auto;
 
   img {
     border-radius: 10px;
   }
+
   img,
   .name {
     margin: auto;
   }
+
+  .name {
+    margin-top: 8px;
+  }
 }
 
+
 .section-link {
+  width: 90px;
+  padding: 40px 40px;
+  margin: 30px 60px;
   position: relative;
   transition: all 200ms ease-in-out;
-  flex-basis: 26%;
-  margin: 15px 0;
+  border: 1px solid transparent;
 }
+
 .section-link:hover {
-  transform: scale(1.15);
-  z-index: 1;
+  background-color: rgba($color: $accent, $alpha: 0.2);
+  border: 1px solid $daccent;
+  border-radius: 4px;
 }
