--- a/src/app/containers/sections/sections.scss
+++ b/src/app/containers/sections/sections.scss
@@ -1,15 +1,18 @@
 @import "../../../styles/all.inc.scss";
 
 .sections {
-  margin: 25px 60px 10px;
+  margin: 50px 60px 10px;
+
   .specialities {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
+
   .title {
     font-size: 20px;
     color: $gray;
     font-weight: 600;
+    margin-bottom: 15px;
   }
 }
