--- a/src/app/components/welcome/welcome.scss
+++ b/src/app/components/welcome/welcome.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 0 150px;
+    margin: 40px 0;
 
     .col {
         flex: 1;
@@ -20,9 +21,9 @@
         .feature {
             flex-basis: 40%;
             box-sizing: border-box;
-            padding: 75px 40px;
+            padding: 40px;
             background: white;
-            margin: 20px 10px;
+            margin: 10px;
             box-shadow: 0px 4px 10px 7px #1010100a;
 
             .feature-content {
