--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -8,6 +8,7 @@ footer {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+            width: 100%;
 
             .col {
                 max-width: 400px;
