--- a/src/app/components/profile-pic/profile-pic.scss
+++ b/src/app/components/profile-pic/profile-pic.scss
@@ -15,11 +15,19 @@
 
     .icon {
         position: absolute;
-        bottom: 0;
-        right: 10px;
-        width: 50px;
+        bottom: -10px;
+        right: -20px;
+        width: 60px;
+        background: white;
+        height: 60px;
+        display: flex;
+        padding: 5px;
+        border-radius: 40px;
+        box-shadow: 3px 3px 19px 5px #0000000d;
+        border: 2px solid #b0c4de6e;
 
         img {
+            margin: auto;
             opacity: 0.95;
             border-radius: 15px;
             max-width: 50px;
