--- a/src/app/pages/check/check.scss
+++ b/src/app/pages/check/check.scss
@@ -1,10 +1,12 @@
 .page {
     .check {
-
         .content {
             margin-top: 200px;
+            margin-bottom: 20px;
             display: flex;
             flex-direction: column;
+
+
 
             .text-field,
             .check-button {
@@ -17,6 +19,11 @@
                 min-width: 70%;
                 margin-bottom: 40px;
             }
+        }
+
+        .data {
+            margin-bottom: 200px;
+            margin-top: 20px;
         }
     }
 }
