--- a/src/app/pages/search/search.scss
+++ b/src/app/pages/search/search.scss
@@ -1,4 +1,16 @@
 .search {
+    .search-bar {
+        margin: 50px 0;
+        display: flex;
+        align-items: center;
+
+        input {
+            font-size: 21px;
+            padding: 5px 10px;
+            margin-right: 20px;
+        }
+    }
+
     .results {
         display: flex;
         flex-wrap: wrap;
